src/display/tests/snapshots/denki__display__tests__formatting__energy_lines_kp115_all_fields.snap
---
source: src/display/tests/formatting.rs
assertion_line: 27
expression: "format_energy_lines(&d).join(\"\\n\")"
---
Power:   5.40 W
Voltage: 120.1 V
Current: 0.045 A
Total:   12345 Wh
